--- a/app/templates/torrents.hbs
+++ b/app/templates/torrents.hbs
@@ -6,6 +6,9 @@
           <th scope="col" class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider">
             Name
           </th>
+          <th scope="col" class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider">
+            Status
+          </th>
         </tr>
       </thead>
       <tbody class="divide-y divide-gray-200">
@@ -13,6 +16,9 @@
           <tr>
             <td class="px-6 py-4 whitespace-nowrap">
               {{item.name}}
+            </td>
+            <td class="px-6 py-4 whitespace-nowrap">
+              {{item.statusName}}
             </td>
           </tr>
         {{/each}}
