--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<div class="relative min-h-screen md:flex bg-bg text-basic">
+<div class="relative min-h-screen md:flex text-basic">
 
   <div class="flex justify-between md:hidden">
     <a href="#" class="block p-4 font-bold">Transmission Admin</a>
