--- a/app/components/menu-item.hbs
+++ b/app/components/menu-item.hbs
@@ -1,4 +1,4 @@
-<LinkTo @route={{@route}} class="flex items-center px-4 py-2 text-gray-700 bg-gray-200 rounded-md dark:bg-gray-700 dark:text-gray-200">
+<LinkTo @route={{@route}} @activeClass="bg-secondary" class="flex items-center px-4 py-2 rounded-md text-light hover:bg-secondary">
   <MdIcon @icon={{@icon}} />
   <span class="mx-4 font-medium">{{@name}}</span>
 </LinkTo>
