--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,15 @@
-<div class="relative min-h-screen md:flex text-basic">
-  <div class="flex flex-col w-64 h-screen px-4 py-8 bg-white border-r dark:bg-gray-800 dark:border-gray-600">
-    <h2 class="text-xl font-semibold text-gray-800 dark:text-white">Transmission Admin</h2>
+<div class="relative min-h-screen flex">
+  <div class="flex flex-col w-64 h-screen px-4 py-8 bg-dark border-r border-light">
+    <h2 class="text-xl font-semibold text-light text-center">Transmission Admin</h2>
 
     <div class="flex flex-col justify-between flex-1 mt-6">
       <nav>
+        <MenuItem
+          @route="torrents"
+          @name="Torrents"
+          @icon="swap-vertical"
+        />
+        <hr class="my-6 border-secondary">
         <MenuItem
           @route="settings"
           @name="Settings"
