--- a/app/templates/torrents.hbs
+++ b/app/templates/torrents.hbs
@@ -1,17 +1,17 @@
 <div class="flex flex-col">
   <div class="overflow-x-auto">
-    <table class="min-w-full divide-y divide-gray-200">
+    <table class="min-w-full divide-y divide-light">
       <thead>
         <tr>
-          <th scope="col" class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider">
+          <th scope="col" class="px-6 py-4 text-left text-xs font-medium uppercase tracking-wider">
             Name
           </th>
-          <th scope="col" class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider">
+          <th scope="col" class="px-6 py-4 text-left text-xs font-medium uppercase tracking-wider">
             Status
           </th>
         </tr>
       </thead>
-      <tbody class="divide-y divide-gray-200">
+      <tbody class="divide-y divide-light">
         {{#each @model as |item|}}
           <tr>
             <td class="px-6 py-4 whitespace-nowrap">
